--- a/todo.txt
+++ b/todo.txt
@@ -1,32 +1,42 @@
-MAIN SECTIONS
-- Computational Mathematics Student at the University of Central Florida
-- social media buttons in top
+Short term / Current::
+
+Finish codehal landing (transitions)
+
+gradient to CSS function (like form video)
 
 About Me
-- Lover of Mathematics... IG desc
+(carousel here)
 
-about me (carousel here)
-This website is being developed to capture all of my interests and projects and make my work more accessible to anyone who wants to see.
+My portfolio consists of my greatest work (including the web design itself) and is in early development. Feel free to explore and get in touch!
+- More info (dropdown)
 
-- Interest bullet point next section
-Contact
-- Empty for now
+=======================================================================
+Midterm / aesthetic::
 
-TOPBAR
-- Follow along with video
-- Maverick
-- 
+Sort files
+Nothing here yet dark version
+Fireship animated navbar target scrollbar
+Discord iframe (invite/servers)
 
-no content dark
-
-gradient to function (like form video)
+=======================================================================
+Long term / wishlist::
+Color changer
+Responsive
+Parallax header effect (astronomy page)
+Reading progress bar (headings panel left)
+THREEJS landing / below
 
 
 
 https://themes.artbees.net/blog/key-sections-in-creative-website-template/
 https://www.youtube.com/watch?v=wLPIwZdo0gM&ab_channel=KevinPowell
 
-https://www.youtube.com/watch?v=RroDdybvu5s&ab_channel=Codehal
 https://www.youtube.com/watch?v=woTqSlryQjw&ab_channel=KevinPowell
 https://www.youtube.com/watch?v=705XCEruZFs&list=PL0vfts4VzfNjfHKRKkMjm_xUXglH6HtL1&index=3&ab_channel=Fireship
 https://www.youtube.com/watch?v=biOMz4puGt8&list=PL0vfts4VzfNjfHKRKkMjm_xUXglH6HtL1&index=3&ab_channel=Fireship
+
+Embeds
+https://premio.io/blog/13-cool-elements-you-can-embed-in-your-my-sticky-elements-widget/
+
+Cool image effects
+https://www.youtube.com/watch?v=k3F1PyBX8pI&ab_channel=Codehal
