--- a/todo.txt
+++ b/todo.txt
@@ -2,9 +2,9 @@ Short term / Current::
 
 ASTRONOMY FULLY DONE!
 HAMBURGER IN PLACE!
+BOTTOM 3JS WAVE!
 
 Go from the layout sketch on your wall, and importantly, your heart!!
-- Bottom cool 3js thing!
 - Make third section responsive (entire page for mobile yay!!)
 - Match card format to astronomy
 - Hover effect (same for both this and astro)(rise / enlarger / change color...)
@@ -25,12 +25,14 @@ Sort files in root
 Make scrollbar custom
 Earth to astronomy page somewhere? Misc ESA Picture / JWST Wasp as something
 - astrophoto picture to Moon (show off best work)
+- Astro bg to #111
 
 Max width on not here yet
 About:
 - Revise writing
 - Reduce margins on small sizes for typing
 - Center veritcally ico (fix div location)
+Topbar inline on small display
 
 -----------------------------------------------------------------------
 Dynamic color change (take inspiration from the simplicity of the example page)
@@ -85,6 +87,9 @@ Contact Page
 	Bring in one after the other
 
 Astrophotography in astro page (at bottom or other)
+
+Blog posts on front / visible
+- Blog collection page (congregation)
 
 ========================================================================
 REFINEMENTS
